DialogClientView: Fix regression in Chrome Task Manager focusing.

This CL fixes a regression introduced in
https://codereview.chromium.org/1690133003/. The regression is caused since the
TaskManagerView, adds child views to the DialogClientView. However,
DialogClientView::SetupFocusChain does not account for externally added child
views.

This CL uses View::ReorderChildView to reorder child views and ensure that
appropriate focus order is maintained. Also the redundant contents_ view in
DialogClientViewTest is removed.

BUG=596045, 586419

Review URL: https://codereview.chromium.org/1826433002

Cr-Commit-Position: refs/heads/master@{#386324}

Former-commit-id: e5b001fd75dc0fc7dbe265020ffbd84be9916d5c